# bookstone

./: .pre-commit-config.yaml  LICENSE  Pipfile  README.md  bookstone.spec  pyproject.toml  setup.cfg
bookstone/: __main__.py  configuration_manager.py  container.py  exceptions.py  utils.py
bookstone/audio/: manager.py
bookstone/backends/: __init__.py
bookstone/backends/ftp/: backend.py  factory.py
bookstone/backends/local/: __init__.py  backend.py
bookstone/backends/smb/: backend.py  file.py
bookstone/ui/: container.py  controller.py  window.py
bookstone/ui/models/: libraries.py  libraries_books.py
bookstone/ui/models/grouped_books/: __init__.py  group.py  grouped_books_item.py  groups.py  sorted_grouped_books_model.py
bookstone/ui/windows/libraries/: __init__.py  backend_tab.py  details_dialog.py  ftp.py  libraries_window.py  local.py  smb.py
bookstone/ui/windows/main/: __init__.py  groups_dialog.py  main_window.py
bookstone/ui/windows/settings/: __init__.py  general_tab.py  settings_window.py
bookstone/workers/: container.py  library_indexing.py  library_saver.py  playback_worker.py
requirements/: base.txt
src/main/python/: backend.py  backend_file.py  configuration_manager.py  container.py  exceptions.py  library.py  library_manager.py  main.py  storage.py  utils.py
src/main/python/audio/: __init__.py  manager.py  stream.py
src/main/python/backends/: __init__.py  local.py  smb.py
src/main/python/threads/: __init__.py  folder_structure_reader.py  priorizable_thread.py  signal_handler.py  tag_reader.py  thread_pool.py  (+1 more)
(+48 files in other folders)
